# hefesto-dualsense4unix

./: .gitignore  CHANGELOG.md  CHECKLIST_MANUAL.md  CHECKLIST_VALIDACAO_v3.2.0.md  CHECKLIST_VALIDACAO_v3.4.0.md  CHECKLIST_VALIDACAO_v3.md  README.md  dsx.sh  flake.nix  install.sh  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/: CONTRIBUTING.md
.github/workflows/: anonymity-check.yml  ci.yml  release.yml
assets/: 70-ps5-controller.rules  71-uhid.rules  71-uinput.rules  73-ps5-controller-hotplug.rules  74-ps5-controller-hotplug-bt.rules  75-ps5-controller-disable-usb-audio.rules  76-dualsense-touchpad-libinput-ignore.rules  77-dualsense-leds.rules  78-dualsense-motion-not-joystick.rules  79-external-controller-leds.rules  80-motion-joydev-hide.rules  81-hefesto-usb-host-power.rules  81-hefesto-usb-power.rules  dsx.desktop  hefesto-dsx-recover.service  hefesto-dualsense4unix-storm-watch.service  hefesto-dualsense4unix.conf  hefesto-dualsense4unix.service  hefesto-launch.sh  hefesto-steam-input-guard.path  hefesto-steam-input-guard.service  hefesto-steam-input-guard.timer  proton-pin.conf
assets/NetworkManager/: hefesto-wifi-powersave.conf
assets/appimage/: requirements.txt
assets/bluetooth/: hefesto-bt.block  hefesto-fastconnectable.block  hefesto-fastconnectable.conf  hefesto-justworks.block  hefesto-justworks.conf
assets/modprobe/: hefesto-dualsense-storm.conf
assets/modprobe.d/: hefesto-btusb-no-autosuspend.conf  hefesto-hid-nintendo.conf
assets/profiles_default/: coop_local.json  meu_perfil.json  point_and_click.json  sackboy_nativo.json
assets/systemd/: bluetooth-dropin-10-hefesto-resilience.conf  hefesto-bt-agent.service  hefesto-bt-bonds-snapshot.service  hefesto-bt-bonds-snapshot.timer  hefesto-bt-health-watchdog.service  hefesto-bt-health-watchdog.timer  hefesto-hidraw-broker.service  hefesto-hidraw-broker.socket
assets/wireplumber/: 51-hefesto-dualsense-no-default-source.conf  52-hefesto-dualsense-disable-source.conf  53-hefesto-dualsense-disable-output.conf
docs/adr/: 001-pydualsense-backend.md  002-textual-tui.md  003-udp-port-6969-compat.md  004-systemd-user-service.md  005-profile-schema-v1.md  006-xlib-window-detection.md  007-wayland-deferral.md  008-bt-vs-usb-polling.md  009-systemd-logind-scope.md  010-ipc-socket-liveness-probe.md  011-glyphs-vs-emojis.md  012-gui-reconnect-state-machine.md  013-usb-autosuspend-disabled.md  018-usb-power-scope-vs-dropout.md  019-wireplumber-default-active-not-configured.md
docs/process/: 2026-07-24-RETOMADA-por-onde-comecar.md  CHECKLIST-VALIDACAO-5-ONDAS.md  HANDOFF-2026-07-19.md  HANDOFF-2026-07-20-maratona-5-ondas.md  PROMPT-PROXIMA-SESSAO.md  ROADMAP.md  SPRINT_PLAN_COSMIC.md
docs/protocol/: ipc-unix-socket.md
docs/research/: 2026-05-28-dualsense-dropout-usb-e-wireplumber-source.md
docs/usage/: cosmic.md  creating-profiles.md  flatpak.md  hotkeys.md  quickstart.md  troubleshooting-8bitdo.md  troubleshooting.md
flatpak/: br.andrefarias.Hefesto.metainfo.xml  br.andrefarias.Hefesto.yml
packaging/arch/: PKGBUILD  README.md  hefesto-dualsense4unix.install
packaging/cosmic-applet/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
packaging/cosmic-applet/data/: com.vitoriamaria.HefestoDualsense4Unix.desktop
packaging/cosmic-applet/src/: app.rs  ipc.rs  main.rs
packaging/debian/: control  postinst  postrm  prerm
packaging/fedora/: README.md  hefesto-dualsense4unix.spec
packaging/nix/: README.md  package.nix
po/: en.po  hefesto-dualsense4unix.pot  pt_BR.po
scripts/: bt_active_mode.sh  bt_bonds_restore.sh  bt_bonds_snapshot.sh  bt_crash_capture.sh  bt_health_watchdog.sh  build_appimage.sh  build_appimage_gui.sh  build_deb.sh  build_flatpak.sh  capture_blueprint.py  check_anonymity.sh  check_packaging_parity.sh  check_version_consistency.py  dev_bootstrap.sh  disable_steam_input.sh  dkms_lib.sh  doctor.sh  dsx_recover.sh  fix_wireplumber_default_source.sh  i18n_compile.sh  i18n_extract.sh  install-host-udev.sh  install_profiles.sh  install_snd_quirk.sh  install_udev.sh  install_usb_quirk.sh  medir_w2_lps.sh  medir_w3_coex.sh  purge.sh  storm_loadtest.sh  storm_watch.sh  teste_combo.py
tests/: conftest.py
(+532 files in other folders)
